Fix issue with SandBox width on tablets

--- a/src/styles/SandBox.module.css
+++ b/src/styles/SandBox.module.css
@@ -41,8 +41,8 @@
 
 /* Tablet and Smaller Desktop */
 @media (min-width: 701px) and (max-width: 1120px) {
-    /* .sandbox {
-      max-width: 90vw;
-      font-size: 1.4rem;
-    } */
+    .sandbox {
+        max-width: 90vw;
+        font-size: 1.4rem;
+    }
 }
